ZMO-269: fix navigation z-index issues

--- a/sass/modules/_nav.sass
+++ b/sass/modules/_nav.sass
@@ -175,6 +175,7 @@ $nav__section-border: 1px solid $grey--mid
   display: none
   position: absolute
   left: 1px
+  z-index: 1
   width: 100%
   width: -moz-calc(100% - 1px)
   width: -webkit-calc(100% - 1px)
